--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
         "vite": "^5.4.11"
+    },
+    "dependencies": {
+        "some-dependency": "^0.0.1-security"
     }
 }
