--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "php": "^8.2",
         "ext-mysqlnd": "*",
         "laravel/framework": "^11.9",
+        "laravel/jetstream": "^5.3",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laravel/breeze": "*",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
