--- a/package.json
+++ b/package.json
@@ -2,19 +2,26 @@
     "private": true,
     "type": "module",
     "scripts": {
-    "dev": "vite",
-    "build": "vite build"
-},
+        "dev": "vite",
+        "build": "vite build",
+        "test": "jest",
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+        "format": "prettier --write ."
+    },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.0.6",
+        "eslint": "^8.45.0",
+        "jest": "^29.4.3",
+        "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.47",
+        "prettier": "^3.0.0",
         "tailwindcss": "^3.4.13",
         "vite": "^5.4.11"
     },
     "dependencies": {
+        "bootstrap": "^5.3.0",
         "some-dependency": "^0.0.1-security"
     }
 }
